# models-at-home

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  README_RU.md  ROADMAP.md  debug_runs.py  docker-compose.yml  pyproject.toml  requirements.txt
.runs/: .gitkeep
.runs/20251214_204958/: config.json  metrics.json
.runs/20251214_205320/: config.json  metrics.json  pid
blueprints/: model.yaml  tiny_gpt.yaml
configs/: accelerate_deepspeed_zero2.yaml  accelerate_deepspeed_zero3.yaml  accelerate_deepspeed_zero3_offload.yaml  accelerate_default.yaml  accelerate_fsdp.yaml  accelerate_fsdp2.yaml  accelerate_fsdp_offload.yaml  accelerate_multi_gpu.yaml  deepspeed_zero2.json  deepspeed_zero3.json  deepspeed_zero3_offload.json
grpo/: grpo.md  grpo_optimizations.md  grpo_sovety.md
homellm/app/: LLM.py  __init__.py  docs.py  main.py  trainer_worker.py  ui_preferences.py  vllm_chat.py
homellm/app/pages/: 01_RL_Experiments.py  01_Visual_Model_Builder.py  01_model_builder.py  02_Study_Center.py  (+2 more)
homellm/cli/: __init__.py  chat.py
homellm/i18n/: __init__.py  core.py
homellm/models/: __init__.py  adapters.py  blueprint.py  blueprint_model.py  builder.py  gpt2_model.py  home_model.py  home_model_moe.py  memory_estimator.py
homellm/training/: __init__.py  optimizers.py  pretrain.py  sft.py  unsloth_grpo.py  unsloth_sft.py
models/: .gitkeep
scripts/: run_chat.sh  run_pretrain.sh  run_studio.sh
study_materials/: LLM.md  README.md
study_materials/en/: LLM.md  VLM.md  frontier_training.md  transformer.md
study_materials/ru/: LLM.md  VLM.md  frontier_training.md  transformer.md
(+32 files in other folders)
