[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "models-at-home"
version = "0.1.0"
description = "Делай модельки дома"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
keywords = ["llm", "transformers", "training", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
full = [
    "deepspeed>=0.14.0",
    "datasets>=2.19.0",
    "safetensors>=0.4.0",
    "wandb>=0.17.0",
    "tensorboard>=2.16.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]
rl = [
    "datasets>=2.19.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "wandb>=0.17.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mah-train = "homellm.training.pretrain:main"
mah-chat = "homellm.cli.chat:main"
mah-grpo = "homellm.training.rl.train_rl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["homellm*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

